Fix bubble offset

--- a/slider.html
+++ b/slider.html
@@ -61,6 +61,7 @@
             margin-bottom: 12px;
             position: relative;
             /* left: 3%; */
+            z-index: 100;
         }
 
         .slider_value {
@@ -87,7 +88,7 @@
             border-left: 5px solid transparent;
             border-right: 5px solid transparent;
             top: 6px;
-            left: 10px;
+            left: 30%;
             /* margin-left: -5px;
             margin-top: -1px; */
         }
