Fix bubble offset

--- a/slider.html
+++ b/slider.html
@@ -210,6 +210,9 @@
             const valuePercent = 100 * (value - min) / (max - min);
             const bubbleWidth = document.querySelector('.slider_value_span').clientWidth;
             const left = ((width * 0.1) / 2) - (bubbleWidth - 30) + valuePercent / 100 * inputWidth;
+            if (left + bubbleWidth > width) {
+                left = width - bubbleWidth;
+            }
             document.querySelector('.slider_value_span').style.left = `${left}px`;
         }
 
