Fix bubble offset

--- a/slider.html
+++ b/slider.html
@@ -209,10 +209,11 @@
             const { value, min, max } = rangeInput;
             const valuePercent = 100 * (value - min) / (max - min);
             const bubbleWidth = document.querySelector('.slider_value_span').offsetWidth;
-            const left = ((width * 0.1) / 2) - (bubbleWidth - 30) + valuePercent / 100 * inputWidth;
-            if (left + bubbleWidth > width) {
-                left = width - bubbleWidth;
-            }
+            let left = ((width * 0.1) / 2) - (bubbleWidth - 30) + valuePercent / 100 * inputWidth;
+            // if (left + bubbleWidth > width) {
+            //     left = width - bubbleWidth;
+            // }
+            left = left + bubbleWidth + 10 > width ? width - bubbleWidth - 10 : left;
             document.querySelector('.slider_value_span').style.left = `${left}px`;
         }
 
