--- a/slider.html
+++ b/slider.html
@@ -224,6 +224,8 @@
             let left = ((width * 0.1) / 2) - (bubbleWidth - 30) + valuePercent / 100 * inputWidth;
             left = left + bubbleWidth + 10 > width ? width - bubbleWidth - 10 : left;
             document.querySelector('.slider_value_span').style.left = `${left}px`;
+            var a = '#4a90e2';
+            rangeInput.style.background = "linear-gradient(to right, ".concat(a, " 0%, ").concat(a, " ").concat((value - min) / (max - min) * 100, "%, #DEE2E6 ").concat((value - min) / (max - min) * 100, "%, #DEE2E6 100%)");
         }
 
         function changeValue(e) {
@@ -232,7 +234,7 @@
             const { value, min, max } = rangeInput;
             moveBubble();
             var a = '#4a90e2';
-            rangeInput.style.background = "linear-gradient(to right, ".concat(a, " 0%, ").concat(a, " ").concat((value - min) / (max - min) * 100, "%, #DEE2E6 ").concat((value - min) / (max - min) * 100, "%, #DEE2E6 100%)")
+            rangeInput.style.background = "linear-gradient(to right, ".concat(a, " 0%, ").concat(a, " ").concat((value - min) / (max - min) * 100, "%, #DEE2E6 ").concat((value - min) / (max - min) * 100, "%, #DEE2E6 100%)");
         }
 
         function submit() {
