--- a/otp_counter.html
+++ b/otp_counter.html
@@ -186,7 +186,7 @@
                         // if (parent.data('autosubmit')) {
                         //     parent.submit();
                         // }
-                        $('#otp_submit').select();
+                        $('#otp_submit').focus();
                     }
                 }
                 else {
