OTP counter listener fixes

--- a/otp_counter.html
+++ b/otp_counter.html
@@ -183,9 +183,9 @@
                     if (next.length) {
                         $(next).select();
                     }
-                    // else {
-                    //     $('#otp_submit').focus();
-                    // }
+                    else {
+                        $('#otp_submit').focus();
+                    }
                 }
                 else {
                     var prev = parent.find('input#' + $(this).data('previous'));
@@ -284,26 +284,18 @@
             submitOtp();
         });
 
-        // $('#otp_submit').on('keyup', function (e) {
-        //     console.log(e, "KEYUP EVENT");
-        //     // if (e.type == "click" || e.keyCode == 13) {
-        //     //     submitOtp();
-        //     //     return;
-        //     // }
-
-        //     switch (e.keyCode) {
-        //         case 8:
-        //         case 37:
-        //         case 38:
-        //             $('#digit-6').select();
-        //             break;
-        //         // case 13:
-        //         //     submitOtp();
-        //         //     break;
-        //         default:
-        //             break;
-        //     }
-        // });
+        $('#otp_submit').on('keyup', function (e) {
+            // console.log(e, "KEYUP EVENT");
+            switch (e.keyCode) {
+                case 8:
+                case 37:
+                case 38:
+                    $('#digit-6').select();
+                    break;
+                default:
+                    break;
+            }
+        });
 
         function initiate() {
             $('#digit-1').select();
