--- a/otp_counter.html
+++ b/otp_counter.html
@@ -280,7 +280,7 @@
         }
 
         $('#otp_submit').on('click', function (e) {
-            console.log(e, "CLICK EVENT");
+            // console.log(e, "CLICK EVENT");
             submitOtp();
         });
 
